--- a/note/.gitignore
+++ b/note/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#lo que yo cree
+package-lock.json
+package.json
+src/lib/config.js
 # dependencies
 /node_modules
 /.pnp
